--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -8,10 +8,48 @@
 // Brand colors
 // -------------------------
 
-@brand-primary:         #27ae60;
+@brand-primary:         #870909;
 
 
 // Glyphicons path
 // -------------------------
 
 @icon-font-path:        "../vendor/bootstrap/fonts/";
+
+// Navbar default
+@navbar-default-color:             #fff;
+@navbar-default-bg:                @brand-primary;
+@navbar-default-border:            darken(@navbar-default-bg, 6.5%);
+
+// Navbar links
+@navbar-default-link-color:                #fff;
+@navbar-default-link-hover-color:          #eee;
+@navbar-default-link-hover-bg:             transparent;
+@navbar-default-link-active-color:         #fff;
+@navbar-default-link-active-bg:            darken(@navbar-default-bg, 6.5%);
+@navbar-default-link-disabled-color:       #ccc;
+@navbar-default-link-disabled-bg:          transparent;
+
+// Navbar brand label
+@navbar-default-brand-color:               @navbar-default-link-color;
+@navbar-default-brand-hover-color:         darken(@navbar-default-brand-color, 10%);
+@navbar-default-brand-hover-bg:            transparent;
+
+// Navbar toggle
+@navbar-default-toggle-hover-bg:           #ddd;
+@navbar-default-toggle-icon-bar-bg:        #888;
+@navbar-default-toggle-border-color:       #ddd;
+
+@navbar-margin-bottom:						0px;
+
+.jumbotron {
+	@media (max-width: @screen-xs-max) {
+		height: 200px;
+	}
+	@media (min-width: @screen-sm-min) and (max-width: @screen-md-max) {
+	    height: 400px;
+  	}
+  	@media (min-width: @screen-lg-min){
+	  	height: 600px;
+  	}
+}
