--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -17,6 +17,7 @@
 @icon-font-path:        "../vendor/bootstrap/fonts/";
 
 // Navbar default
+@grid-float-breakpoint:			   @screen-sm-max;
 @navbar-default-color:             #fff;
 @navbar-default-bg:                @brand-primary;
 @navbar-default-border:            darken(@navbar-default-bg, 6.5%);
