Got the base-page-home working, and a bunch of home styling, like affix working. also styling jumbotron h1

--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -53,4 +53,20 @@
   	@media (min-width: @screen-lg-min){
 	  	height: 600px;
   	}
+  	h1 {
+	  	display: inline-block;
+	  	padding: 15px;
+	  	background-color: @brand-primary;
+	  	color: white;
+  	}
+}
+
+#nav-home.affix {
+	position: fixed;
+	top: 0;
+	width: 100%;
+}
+
+.home > .jumbotron {
+	margin-bottom: 0px;
 }
