--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -53,11 +53,14 @@
   	@media (min-width: @screen-lg-min){
 	  	height: 600px;
   	}
-  	h1 {
+  	header {
 	  	display: inline-block;
 	  	padding: 15px;
 	  	background-color: @brand-primary;
 	  	color: white;
+	  	* {
+		  	margin: 0px;
+	  	}
   	}
 }
 
