--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -69,12 +69,10 @@
 	  	display: inline-block;
 	  	padding: 15px;
 	  	color: white;
+	  	background-color: fade(@brand-primary, 50%);
 	  	//max-width: @
 	  	* {
 		  	margin: 0px;
-	  	}
-	  	@media (max-width: @screen-xs-max) {
-		  	background-color: fade(@brand-primary, 50%);
 	  	}
   	}
 }
@@ -86,9 +84,19 @@
 }
 
 
+
+
 // make sure the home jumbotron has no space above the navbar, but that may be taken care off with margin-bottom up top
-.home > .jumbotron {
-	margin-bottom: 0px;
+.home {
+	.jumbotron {
+		margin-bottom: 0px;
+		header {
+			background-color: transparent;
+			@media (max-width: @screen-xs-max) {
+				background-color: fade(@brand-primary, 50%);
+			}
+		}
+	}
 }
 
 // squared off buttons
