style up the news

--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -138,5 +138,22 @@
 
 // Make it so that the dropdowns don't expand stuff wider
 b.caret {
-	margin-right: -8px;
+	margin-right: -10px;
+}
+
+.entry-content {
+	img {
+		max-width: 100%;
+		height: auto;
+	}
+}
+
+article {
+	header {
+		.jumbotron {
+			a {
+				color: white;
+			}
+		}
+	}
 }
