--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -157,3 +157,60 @@ article {
 		}
 	}
 }
+
+footer {
+	padding-bottom: @font-size-base;
+	color: white;
+	background-color: black;
+	.footer-brand img {
+		height: 75px;
+		width: 75px;
+	}
+	.brand {
+		margin-top: 0px;
+		margin-bottom: 0px;
+		a{
+			color: white;
+		}
+		a:hover {
+			color: darken(white, 15%);
+			text-decoration: none;
+		} 
+	}
+	a {
+		color: white;
+	}
+	p, .brand-link {
+		font-size: @font-size-small;
+		margin-bottom: 0px;
+	}
+	
+	ul.social {
+		list-style-type: none;
+		li {
+			display: inline;
+			padding-right: @font-size-base;
+		}
+		a {
+			display: inline-block;
+			text-align: center;
+			color: black;
+			background-color: white;
+			height: 2*@font-size-large;
+			width: 2*@font-size-large;
+			i {
+				display: inline-block;
+				font-size: 2*@font-size-base;
+				vertical-align: middle;
+			}
+		}
+	}
+	ul.navbar-footer {
+	   list-style-type: none;
+	   li {
+	   	display: inline;
+	   	padding-right: @font-size-base;
+	   }
+	}
+}
+
