Vertically centering the social icons, a really ugly way

--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -200,6 +200,7 @@ footer {
 			width: 2*@font-size-large;
 			i {
 				display: inline-block;
+				padding-top: (@font-size-large - @font-size-base)*1.5;
 				font-size: 2*@font-size-base;
 				vertical-align: middle;
 			}
@@ -213,4 +214,3 @@ footer {
 	   }
 	}
 }
-
