Centered the bottom tagline Closes #1

--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -162,6 +162,9 @@ footer {
 	padding-bottom: @font-size-base;
 	color: white;
 	background-color: black;
+	h6 {
+		text-align: center;
+	}
 	.footer-brand img {
 		height: 75px;
 		width: 75px;
