--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -208,6 +208,16 @@ footer {
 				vertical-align: middle;
 			}
 		}
+		.popover {
+			color: black;
+			ul {
+				list-style: none;
+				padding-left: 0;
+			}
+			li {
+				display: list-item;
+			}
+		}
 	}
 	ul.navbar-footer {
 	   list-style-type: none;
@@ -217,3 +227,4 @@ footer {
 	   }
 	}
 }
+
