--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -210,6 +210,9 @@ footer {
 		}
 		.popover {
 			color: black;
+			a {
+				display: inline;
+			}
 			ul {
 				list-style: none;
 				padding-left: 0;
