Social Streamed #4 Set to max width on xs-small-screens Needs jQuery to be loaded in the header, and WP-DEBUG set to False so that PHP Strict errors aren't shown with jQuery in the header, it needs to be explicitly referenced as `jquery` rather than `$`

--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -108,6 +108,11 @@ header, .footer-brand {
 			font-size: @font-size-h4;
 		}
 	}
+	.dcwss.dc-wall.col-4 .stream li {
+		@media (max-width: @screen-xs-max) {
+			width: 100%;
+		}
+	}
 }
 
 // squared off buttons
