--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -194,10 +194,13 @@ footer {
 		a:hover {
 			color: darken(white, 15%);
 			text-decoration: none;
-		} 
+		}
 		h6 {
 			text-align: left;
 		}
+	}
+	.brand-contact {
+		font-size: 125%;
 	}
 	a {
 		color: white;
@@ -206,7 +209,7 @@ footer {
 		font-size: @font-size-small;
 		margin-bottom: 0px;
 	}
-	
+
 	ul.social {
 		list-style-type: none;
 		li {
