Added p selector to brand-contact in footer

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6732,7 +6732,7 @@ footer .brand a:hover {
 footer .brand h6 {
   text-align: left;
 }
-footer .brand-contact {
+footer .brand-contact p {
   font-size: 125%;
 }
 footer a {
