--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -199,8 +199,10 @@ footer {
 			text-align: left;
 		}
 	}
-	.brand-contact p {
-		font-size: 125%;
+	.brand-contact {
+		p, a {
+			font-size: 100%;
+		}
 	}
 	a {
 		color: white;
