Make images max-width fit the column they are in

--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -131,6 +131,11 @@ header, .footer-brand {
 
 .content {
 	margin-top: 15px;
+	.main {
+		img {
+			max-width: 100%;
+		}
+	}
 }
 
 // Style the school name in the navbar
