Keep the header on the home page at least from pushing the menu off the page

--- a/assets/less/_variables.less
+++ b/assets/less/_variables.less
@@ -54,6 +54,12 @@
 
 @navbar-margin-bottom:						0px;
 
+//make it so that the header jumbotron doesn't push the menu off the screen
+#header.jumbotron {
+	max-height: 70vh;
+}
+
+
 .jumbotron {
 	margin-bottom: 0px;
 	@media (max-width: @screen-xs-max) {
