--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: mt_cen;
-  src: url(fonts/ufonts.com_tw-cen-mt.ttf);
+  src: url(../fonts/ufonts.com_tw-cen-mt.ttf);
 }
 
 body {
