--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -196,7 +196,7 @@ body {
     width:300px;
     margin:auto !important;
     background:#000;
-    background-image: url('images/seal150invert.png');
+    background-image: url('../img/seal150invert.png');
     background-position: left center;
     background-repeat: no-repeat;
     background-size:75px;
